--- a/assets/index.html
+++ b/assets/index.html
@@ -5,7 +5,7 @@
 <title>pub-doc</title>
 <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
 
-<script src="./assets/js/jquery.min.js"></script>
+<script src="/assets/js/jquery.min.js"></script>
 <script src="/assets/js/jquery-ui.min.js"></script>
 </head>
 <body>
