--- a/demo/samples/pubGrid.html
+++ b/demo/samples/pubGrid.html
@@ -1,12 +1,8 @@
 ---
 layout: sub-layout
-title : Pub-js
+title : Pub-grid
 ---
-<!doctype html>
-<HTML>
-<HEAD>
-<TITLE>pub GRID-예제</TITLE>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
 <link href="../theme/default/pub.example.css" rel="stylesheet">
 <link href="../theme/default/pub.grid.css" rel="stylesheet">
 
@@ -21,17 +17,14 @@ html , body {
     height: calc(100% - 20%) !important;
 }
 </style>
-</HEAD>
-<BODY>
 <div>
 	item generate count<div id="genCount"></div>
 	<button class="exceldown" type="button">excel download</button>
 </div>
 <div class="asdfasdfWrapper">
-	<div id="asdfasdf" style="height:100%"></div>
+	<div id="asdfasdf" style="height:200px"></div>
 </div>
-</BODY>
-</HTML>
+
 <script>
 
 $(document).ready(function (){
