--- a/demo/samples/pubTree.html
+++ b/demo/samples/pubTree.html
@@ -1,7 +1,11 @@
+---
+layout: sub-layout
+title : tree
+---
 <!doctype html>
 <HTML>
 <HEAD>
-<TITLE>pub EP-예제</TITLE>
+<TITLE>pub tree-예제</TITLE>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <link href="../theme/default/pub.example.css" rel="stylesheet">
