--- a/demo/samples/pubGridFixed.html
+++ b/demo/samples/pubGridFixed.html
@@ -39,7 +39,7 @@ html , body {
 		<option value="100000">100000</option>
 	</select>
 </div>
-<div class="asdfasdfWrapper">
+<div class="asdfasdfWrapper" style="height:200px;">
 	<div id="asdfasdf" style="height:100%"></div>
 </div>
 <div class="asdfasdfWrapper">
