--- a/demo/samples/pubCalendar.html
+++ b/demo/samples/pubCalendar.html
@@ -17,6 +17,12 @@ title : Pub-Calendar
 
 <script src="../dist/pub.calendar.js"></script>
 <script>
+//기념일 등록. 
+$.pubCalendar.setMemorialDay([
+	{date:'1002',desc : '대체공휴일' ,isLunar: false ,holiday :  true}
+	,{date:'1006',desc : '대체공휴일' ,isLunar: false ,holiday :  true}
+]);
+
 var todayDate =moment(new Date()).format('YYYY-MM-DD');
 function createMini(){
 
