--- a/demo/samples/pubMultiselect.html
+++ b/demo/samples/pubMultiselect.html
@@ -1,5 +1,7 @@
-<!doctype html>
-<HTML>
+---
+layout: sub-layout
+title : pub GRID-fixed-예제
+---
 <HEAD>
 <TITLE>pub Multi select -예제</TITLE>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
