--- a/demo/samples/pubGridFixed.html
+++ b/demo/samples/pubGridFixed.html
@@ -1,8 +1,5 @@
----
-layout: sub-layout
-title : pub GRID-fixed-예제
----
-
+<!doctype html>
+<HTML>
 <HEAD>
 <TITLE>pub GRID-fixed-예제</TITLE>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -12,6 +9,15 @@ title : pub GRID-fixed-예제
 <script src="../plugins/jquery-1.10.2.min.js"></script>
 <script src="../dist/pub.context.js"></script>
 <script src="../dist/pub.grid.fixed.js"></script>
+<style>
+html , body {
+	height:100%;
+}
+.asdfasdfWrapper {
+    height: calc(100% - 20%) !important;
+}
+
+</style>
 </HEAD>
 <BODY>
 <div>
@@ -30,13 +36,14 @@ title : pub GRID-fixed-예제
 		<option value="100000">100000</option>
 	</select>
 </div>
-<div class="asdfasdfWrapper" style="height:200px;">
+<div class="asdfasdfWrapper">
 	<div id="asdfasdf" style="height:100%"></div>
 </div>
 <div class="asdfasdfWrapper">
 	<div id="asdfasdf1" style="height:100%"></div>
 </div>
 </BODY>
+</HTML>
 <script>
 
 $(document).ready(function (){
@@ -79,7 +86,7 @@ function getItem (type){
 		for(var i =0 ;i <itemCount; i++){
 			var tmpItem = {};
 
-			for(var j =0 ; j< 150 ;j++){
+			for(var j =0 ; j< 15 ;j++){
 				var colName = 'col'+j ; 
 				tmpItem[colName] =  ('cont'+i+" _ "+j) ;
 				//tmpItem[colName] = j< 30 ? ('cont'+i+" _ "+j) :'';
@@ -129,7 +136,7 @@ function gridDraw(selector, aaa, colItem){
 				,displayLineNumber : true	 // 라인 넘버 보기.
 				,displayRowSelector : false	 // row selecotr checkbox 보기
 				,displayModifyInfo : false	 // 수정여부 보기
-				,colFixedIndex :1
+				,colFixedIndex :0
 				,resize:{
 					enabled : true
 				}
@@ -210,9 +217,14 @@ function gridDraw(selector, aaa, colItem){
 					}
 					,callback: function(key,sObj) {
 						console.log(this,key,sObj);
+
+						if(key =='copy'){
+							gridObj.copyData();
+						}
 					}
 					,items: [
 						{key : "refresh" , "name": "새로고침"}
+						,{key : "copy" , "name": "복사"}
 						,{key : "sql_create", "name": "sql생성" 
 							,subMenu: [
 								{ key : "selectStar","name": "select *" , mode: "selectStar"}
