--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title : Pub-js
     <h1 class="my-4">Pub <small>jQuery Plugins </small></h1>
 
 		<div class="row" id="pubjs-plugin">
-			<div class="col-lg-12" style="text-align: center;margin: 10px;">
+			<div class="col-lg-12" style="text-align: center;margin: 10px 10px 30px;">
 				<div style="text-align:ceter;">
 					<button class="btn btn-default" type="button" style="background: #7376df;">
 						<a href="{{site.data.siteInfo.githubSite}}" style="color: #fff;" target="_blank"><i class="fa fa-github"></i><span style="padding-left:10px;">Download from Github</span></a>
